--- a/conf.d/customized/developer.pl.conf
+++ b/conf.d/customized/developer.pl.conf
@@ -1,9 +1,9 @@
 <VirtualHost *:80>
-	DocumentRoot /export/source/www/cms/public
-	ServerName developer.pl
 	ServerAlias *.developer.pl
+	ServerName developer.pl
+	VirtualDocumentRoot /export/source/www/%-3/public
 
-	<Directory "/export/source/www/cms">
+	<Directory "/export/source/www/">
 		Options +FollowSymLinks
 		AllowOverride All
 	</Directory>
