--- a/conf.d/customized/developer.pl.conf
+++ b/conf.d/customized/developer.pl.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
-	ServerAlias *.developer.pl
+	ServerAlias *.developer.pl *.dev
 	ServerName developer.pl
-	VirtualDocumentRoot /export/source/www/%-3/public
+	VirtualDocumentRoot /export/source/www/%-3/
 
 	<Directory "/export/source/www/">
 		Options +FollowSymLinks
