--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -1010,6 +1010,8 @@ NameVirtualHost *:80
 #</VirtualHost>
 # CUSTOM
 SetEnv DEVELOPMENT true
+SetEnv APPLICATION_ENV development
+
 <filesMatch "\.(html|htm|js|css)$">
 	FileETag None
 	<ifModule mod_headers.c>
